# generalized_barycentric

./: CMakeLists.txt  README.md  colorfill.cpp  imagewarp.cpp  main.cpp  tcv.h  tcv_barycentric.cpp  tcv_barycentric.h  tcv_simd.h
